

RELEASE NOTES
=============


2.38.2 - January ??, 2010

    Added support for the proprietary directive initialization/2 to the config
    files of SWI-Prolog and YAP.

    Updated the library object "term" with a (hopefully) faster implementation
    of the predicate ground/1, following advise by Lindsey Spratt on the GNU
    Prolog mailing list.


2.38.1 - December 21, 2009

    Added support for using the {}/1 compiler bypass Logtalk control construct
    to wrap closures that should be executed within the context of the pseudo-
    object "user" (e.g. calls to Prolog built-in predicates).

    Workaround module meta-predicate semantics in order to support calls to
    module meta-predicates specified in use_module/2 directives within objects
    and categories.

    Added support for compiling calls to module meta-predicates that are
    explicitly qualified (may require that the modules are loaded, depending
    on the back-end Prolog compiler).

    Code cleanup of meta-predicate directives compilation. Tighten checks of
    meta-predicate directives and meta-predicate directive arguments.

    Improved compilation of call/2-N goals.

    Improved performance of meta-calls that are compiled at runtime.

    Improved performance of the lambda expression Free/Goal, usually used in
    bagof/3 and setof/3 calls.

    Improved lambda expression error-checking and added support for using a
    (>>)/2 lambda expression as a goal.

    Corrected a bug in handling the meta-call context for lambda expressions.

    Corrected a typo in the exception term generated when sending a message to
    an object corresponding to a built-in local method.

    Updated the CxProlog config file in order to set write term and write list
    limits that allow compilation of the Logtalk libraries and examples (the
    default values are two low in some cases leading to compilation errors).
    In addition, take advantage of the new "version_data" flag, thus requiring